Finally fixed sidebar overflow glitch

--- a/halacha-times-display/app/page.module.css
+++ b/halacha-times-display/app/page.module.css
@@ -56,6 +56,7 @@
   flex-direction: column;
   justify-content: center;
   scrollbar-width: none; /* For Firefox */
+  max-height: 100%;
 }
 
 .sidebar::-webkit-scrollbar {
@@ -65,8 +66,7 @@
 .sidebar ul {
   list-style-type: none;
   padding: 0;
-  padding-top: 128px;
-  scroll-margin-top: 128px; /* Ensure the top of the elements in the list are always visible */
+  max-height: 100%;
 }
 
 .sidebar li {
